@@ -459,6 +459,7 @@ at least five pages.
     \item The word \texttt{all} is the same as \texttt{1-end}.
     \item A range must contain no spaces.
     \item A tilde (\texttt{\~{}}) defines a page number counting from the end of the document rather than the beginning. Page \texttt{\~{}1} is the last page, \texttt{\~{}2} the penultimate page etc.
+    \item Prepending \texttt{NOT} to a whole page range inverts it.
   \end{itemize}
  
   \noindent For example:
