@@ -1,7 +1,9 @@
 2.5 (Upcoming)
 
 o Environment variable CPDF_REPRODUCIBLE_DATES for testing
+o Environment variable CPDF_DEBUG for -debug
 o Effectively make stderr unbuffered
+o Prepend NOT to a page range to invert it
 
 2.4 (June 2021)
 
